--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -4,15 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Info Fragment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/teal_200"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/cho"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/img"
+        android:text="Ngo Thi Kieu Oanh \nDao nay hay can lam"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="24sp"
+        android:paddingHorizontal="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
